# winona_etl

./: .gitignore  README.md
eda/: dedup_sales_history.py  pyproject.toml
sales_history_dump/: README.md  pyproject.toml
sales_history_dump/src/sales_history_dump/: __main__.py  cli.py  sales_history_dump.py
sales_history_dump/src/sales_history_etl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sales_history_dump/src/winona_wh_dump/: sales_history_dump.py
sales_history_etl/: README.md  TODO.md  dbt_project.yml  pyproject.toml
sales_history_etl/models/mart/: mart_product_sales.sql
sales_history_etl/models/mart/data_engineering/: mart_product_export_counts_per_export.sql  mart_product_export_stats.sql  newest_items_added.sql
sales_history_etl/models/mart/product/: mart_composite_items.sql  mart_item.sql  mart_item_by_tag.sql  mart_item_curr.sql  mart_item_curr_active.sql
sales_history_etl/models/mart/products/: mart_composite_items.sql
sales_history_etl/models/mart/sales/: mart_sale.sql
sales_history_etl/models/stg/product/: stg_composite.sql  stg_composite_to_item.sql  stg_item.sql  stg_item_current.sql  stg_latest_product_export.sql  stg_product_export.sql  stg_unique_item.sql
sales_history_etl/models/stg/sale/: stg_payment.sql  stg_sale.sql  stg_sale_line.sql
sales_history_etl/models/stg/sale_history/: stg_sale.sql  stg_sale_line.sql
winona_wh_dump/: README.md  pyproject.toml
winona_wh_dump/src/winona_wh_dump/: __main__.py  cli.py  db_utils.py  sales_history_dump.py
(+6 files in other folders)
